# Password-manager

./: pyproject.toml  test_metadata.py
app/: main.py
app/api/: auth.py
app/core/: config.py
app/db/: base.py  dependencies.py  session.py
app/models/: user.py
app/schemas/: auth.py
app/services/: user_service.py
migrations/: env.py
migrations/versions/: 70037e848e42_create_users_table.py
