[project]
name = "password-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "litestar>=2.22.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
]
